| Summary: | ASTERISK-29691: stun: Not all users provide a dst to ast_stun_request | ||||
| Reporter: | Dennis Haney (CineCine) | Labels: | |||
| Date Opened: | 2021-10-13 21:56:17 | Date Closed: | 2021-10-18 22:38:28 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Core/General Resources/res_stun_monitor | ||
| Versions: | 18.7.1 | Frequency of Occurrence | Frequent | ||
| Related Issues: |
| ||||
| Environment: | Linux . 4.19.0-16-amd64 #1 SMP Debian 4.19.181-1 (2021-03-19) x86_64 GNU/Linux | Attachments: | ( 0) asteriskcrash.zip | ||
| Description: | We are getting random crashes of asterisk. Sometimes 10 times in a row, sometimes once every day or two. Sometimes it takes a week.
Unsure when they started, fairly certain we didn't run into the issue in 18.5. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2021-10-13 21:56:18.647-0500 The severity of this issue has been automatically downgraded from "Blocker" to "Major". The "Blocker" severity is reserved for issues which have been determined to block the next release of Asterisk. This severity can only be set by privileged users. If this issue is deemed to block the next release it will be updated accordingly during the triage process. By: Asterisk Team (asteriskteam) 2021-10-13 21:56:18.919-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Dennis Haney (CineCine) 2021-10-13 21:57:17.502-0500 ast_coredumper output By: Dennis Haney (CineCine) 2021-10-13 21:57:52.358-0500 Attached ast_coredumper output, please advise for any further files you need. By: Joshua C. Colp (jcolp) 2021-10-14 04:28:17.527-0500 [~sduthil] This appears to be caused by your change to output a log message when STUN timeout occurs. By: Sébastien Duthil (sduthil) 2021-10-14 10:34:21.216-0500 Thanks for the heads up, I pushed a patch to Gerrit. By: Friendly Automation (friendly-automation) 2021-10-15 09:57:01.750-0500 Change 16611 merged by Friendly Automation: main/stun.c: fix crash upon STUN request timeout [https://gerrit.asterisk.org/c/asterisk/+/16611|https://gerrit.asterisk.org/c/asterisk/+/16611] By: Friendly Automation (friendly-automation) 2021-10-15 10:00:09.357-0500 Change 16610 merged by Friendly Automation: main/stun.c: fix crash upon STUN request timeout [https://gerrit.asterisk.org/c/asterisk/+/16610|https://gerrit.asterisk.org/c/asterisk/+/16610] By: Friendly Automation (friendly-automation) 2021-10-15 13:40:11.711-0500 Change 16609 merged by George Joseph: main/stun.c: fix crash upon STUN request timeout [https://gerrit.asterisk.org/c/asterisk/+/16609|https://gerrit.asterisk.org/c/asterisk/+/16609] By: Friendly Automation (friendly-automation) 2021-10-15 13:40:35.489-0500 Change 16579 merged by George Joseph: main/stun.c: fix crash upon STUN request timeout [https://gerrit.asterisk.org/c/asterisk/+/16579|https://gerrit.asterisk.org/c/asterisk/+/16579] By: Dennis Haney (CineCine) 2021-10-18 22:38:09.227-0500 Haven't had any crashes since applying the patch. Thanks for the quick fix! By: Asterisk Team (asteriskteam) 2021-10-18 22:38:09.822-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. | ||||